[FIX] Slider arrow is overlapping vertical scrollbar in IE.

--- a/dev/styles/main/contentElements/slider.less
+++ b/dev/styles/main/contentElements/slider.less
@@ -106,6 +106,14 @@
         font-size: 62px;
         margin-top: 20px;
     }
+    html.IE {
+        .img-slider__btn-next{
+            right: 25px;
+        }
+        .img-slider__btn-prev{
+            left: 25px;
+        }
+    }
 }
 
 @media (min-width: 992px) {
